--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
         <h1>MINE SWEEPER </h1>
     </div>
 
-    <div class="Levels">
-        <p>Choose your level:</p>
-        <label><b>Beginner</b>
-            <input type="radio" data-size="4" data-mines="2" checked="checked" name="radio"
-                onclick="chooseBoardSize(this)" value="4" />
-        </label>
-        <label><b>Medium</b>
-            <input type="radio" data-size="8" data-mines="12" name="radio" onclick="chooseBoardSize(this)" value="8" />
-        </label>
-        <label><b>Expert</b>
-            <input type="radio" data-size="12" data-mines="30" name="radio" onclick="chooseBoardSize(this)"
-                value="12" />
-        </label>
-    </div> <br>
+    <div class="games-functions">
+        <!-- <div class="best-score">Best Scores</div> -->
 
-    <div class="timer">Time: <span>00:000</span></div>|
-    <div class="lives"><span></span></div>|
-    <div class="hints">
-        <span  onclick="getHint(this)">💡</span>
-        <span onclick="getHint(this)">💡</span>
-        <span onclick="getHint(this)">💡</span>
-    </div>|
-    <div class="safe-click"><button>safe click</button></div>
-
-    <div class="modal"><span class="smiley" onclick="init()">😃</span></div><br>
-
+        <div class="levels">
+            <p>Choose your level:</p>
+            <label><b>Beginner</b>
+                <input type="radio" data-size="4" data-mines="2" checked="checked" name="radio"
+                    onclick="chooseBoardSize(this)" value="4" />
+            </label>
+            <label><b>Medium</b>
+                <input type="radio" data-size="8" data-mines="12" name="radio" onclick="chooseBoardSize(this)"
+                    value="8" />
+            </label>
+            <label><b>Expert</b>
+                <input type="radio" data-size="12" data-mines="30" name="radio" onclick="chooseBoardSize(this)"
+                    value="12" />
+            </label>
+        </div>
+        <div class="game-info">
+            <div class="timer">Time: <span>00:000</span></div>|
+            <div class="lives"><span></span></div>|
+            <div class="hints">
+                <span onclick="getHint(this)">💡</span>
+                <span onclick="getHint(this)">💡</span>
+                <span onclick="getHint(this)">💡</span>
+            </div>|
+            <div class="safe-click"><button>safe click</button></div>
+        </div>
+        <div class="modal"><span class="smiley" onclick="init()">😃</span></div><br>
+    </div>
+    
     <div class="board-container">
         <table>
             <tbody class="game-board" border="1"></tbody>
