--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/board.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Mine Sweeper - Shir Lavi</title>
 </head>
@@ -47,7 +48,8 @@
                 <span onclick="getHint(this)">💡</span>
                 <span onclick="getHint(this)">💡</span>
             </div>|
-            <div class="safe-click" onclick="safeClick()"><span>3</span> clicks available</span><button>safe click</button></div>
+            <div class="safe-click" onclick="safeClick()"><span>3</span> clicks available</span><button>safe click</button></div>|
+            <div class="undo"><button onclick="undo()">UNDO</button></div>
         </div>
         <div><span class="smiley" onclick="init()">😃</span></div>
     </div>
@@ -58,6 +60,7 @@
         </table>
     </div>
 
+    <p class="footer">By: Shir Lavi</p>
 
     <script src="js/utils.js"></script>
     <script src="js/main.js"></script>
