--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </label>
         </div>
         <div class="game-info">
-            <div class="timer">Time: <span>00:000</span></div>|
+            <div class="timer">Time: <span>00:00:00</span></div>| 
             <div class="lives"><span></span></div>|
             <div class="hints">
                 <span onclick="getHint(this)">💡</span>
@@ -49,7 +49,8 @@
                 <span onclick="getHint(this)">💡</span>
             </div>|
             <div class="safe-click" onclick="safeClick()"><span>3</span> clicks available</span><button>safe click</button></div>|
-            <div class="undo"><button onclick="undo()">UNDO</button></div>
+            <div class="undo"><button onclick="undo()">UNDO</button></div>|
+            <div class="manual"><button onclick="toggleManualPosition(this)">Manual</button></div>
         </div>
         <div><span class="smiley" onclick="init()">😃</span></div>
     </div>
