--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="best-score">
         <h3>Best Scores</h3>
-        <p class="begginer">Begginer: <span>0</span></p>
+        <p class="begginer">Beginner: <span>0</span></p>
         <p class="medium">Medium: <span>0</span></p>
         <p class="expert">Expert: <span>0</span></p>
     </div>
